# GPUNIDS

./: CMakeLists.txt  Dockerfile  FindPCAP.cmake  LICENSE  README.md  docker-compose.yml
src/: main.cpp
src/ThreadPool/: Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h
src/capture/: libPCAP.cpp  libPCAP.h
src/inspection/: CPUinspection.cpp  CPUinspection.h  GPUinspection.cu  GPUinspection.h  inspection.cpp  inspection.h
src/util/: Packet.cpp  Packet.h
